Fix playlist tooltip getting too tall

Might be the case if comment strings are too long.

FIXED-IN: 2.4.2
BUG: 256038